# polkadot-hackaton-2024-rust-workshop

./: Cargo.toml
src/: 00-basic-syntax.rs  11-mutablity.rs  12-copy-clone.rs  13-dangling.c  13-dangling.rs  13-ownership-references.rs  14-dangling.c  20-addition.rs  21-structs-enums.rs  22-traits.rs  30-checked-addition.rs  31-parsing-iterators.rs  31-parsing.rs  32-iterators.rs
