[package]
name = "demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "00-basic-syntax"
path = "./src/00-basic-syntax.rs"

[[bin]]
name = "11-mutablity"
path = "./src/11-mutablity.rs"

[[bin]]
name = "12-copy-clone"
path = "./src/12-copy-clone.rs"

[[bin]]
name = "13-dangling"
path = "./src/13-dangling.rs"

[[bin]]
name = "13-ownership-references"
path = "./src/13-ownership-references.rs"

[[bin]]
name = "21-structs-enums"
path = "./src/21-structs-enums.rs"

[[bin]]
name = "22-traits"
path = "./src/22-traits.rs"

[[bin]]
name = "30-checked-addition"
path = "./src/30-checked-addition.rs"

[[bin]]
name = "31-parsing"
path = "./src/31-parsing.rs"

[[bin]]
name = "32-iterators"
path = "./src/32-iterators.rs"
